--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -40,7 +40,9 @@ jobs:
     - name: Install npm
       run: npm install
     - name: Build
-      run: npm run build
+      run: |
+        npm run build
+        ls -al
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
