--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "markdown-it": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.42.1"
+  },
+  "devDependencies": {
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3"
   }
 }
