--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.42.1"
   },
   "devDependencies": {
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "node-fetch": "^3.0.0"
   }
 }
