--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@11ty/eleventy": "^0.12.1",
     "markdown-it": "^10.0.0",
     "npm-run-all": "^4.1.5",
+    "prismjs": "^1.25.0",
     "sass": "^1.42.1"
   },
   "devDependencies": {
