--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 package-lock.json
 
-_site
+_site/
 
 # Runtime data
 pids
@@ -106,6 +106,3 @@ dist
 
 # TernJS port file
 .tern-port
-
-# Custom
-_site
