--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Website for harvest-python",
   "main": "index.html",
   "scripts": {
-    "build": "npx @11ty/eleventy --pathprefix=harvest-website; sass sass:_site/css",
-    "watch:11ty": "npx @11ty/eleventy --serve",
-    "watch:sass": "sass --watch sass:_site/css",
-    "start": "npm-run-all --parallel watch:*"
+    "dev": "npm-run-all --parallel watch:*",
+    "watch:11ty": "eleventy --serve",
+    "watch:tw": "npx tailwindcss -i _site/css/tw.css -c src/tailwind.config.js -o _site/css/tailwind.css --watch",
+    "watch:sass": "sass --watch src/sass:_site/css",
+    "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production npx tailwindcss -i src/tailwind.css -c src/tailwind.config.js -o _site/css/tailwind.css --minify"
   },
   "repository": {
     "type": "git",
@@ -21,13 +22,17 @@
   "homepage": "https://github.com/tfukaza/harvest-website#readme",
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "daisyui": "^2.15.1",
+    "jsdom": "^19.0.0",
     "markdown-it": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "prismjs": "^1.25.0",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.0.0",
+    "tailwindcss": "^3.0.24"
   }
 }
