--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "astro": "^4.9.2",
     "svelte": "^4.2.18",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "sass": "^1.77.6"
   }
 }
